--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -214,12 +214,18 @@ body {
       border: 0;
       font-size: 14px;
       line-height: 20px;
+      position: relative;
+
+      &:required {
+        border: v.$additional-error;
+      }
     }
 
     .login__item {
       width: 100%;
       display: flex;
       flex-direction: column;
+      position: relative;
 
       label {
         font-size: 12px;
@@ -288,6 +294,15 @@ body {
           }
         }
       }
+    }
+  }
+  &__block-icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: inline-block;
+    > svg {
+      cursor: pointer;
     }
   }
 }
