--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -15,3 +15,12 @@ $additional-error: #f46666;
 $additional-success: #17bc77;
 
 $duration: 0.15s;
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
