--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -12,6 +12,11 @@
   pointer-events: none;
   opacity: 0;
   transition: 0.5s all;
+
+  @media (max-width: 450px) {
+    align-items: end;
+  }
+
   &.active {
     opacity: 1;
     pointer-events: all;
@@ -31,6 +36,12 @@
     width: 100%;
     transition: 0.4s all;
     transform: scale(0.5);
+    @media (max-width: 450px) {
+      max-width: 100%;
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+      padding: 32px 16px;
+    }
 
     h3 {
       max-width: 260px;
@@ -49,6 +60,9 @@
         path {
           fill: #000;
         }
+      }
+      @media (max-width: 450px) {
+        display: none;
       }
     }
 
