--- a/src/scss/libs/_normalize.scss
+++ b/src/scss/libs/_normalize.scss
@@ -40,6 +40,10 @@ h2 {
   font-size: 24px;
   line-height: 32px;
 }
+h3 {
+  font-weight: 500;
+  font-size: 20px;
+}
 
 a {
   text-decoration: none;
